# cli-calculator

./: .gitignore  Cargo.toml
appdata/: config.toml
src/: cli.rs  file_handler.rs  lib.rs  main.rs
src/file_handler/: config.rs  storage.rs
