[package]
name = "cli-calc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
dialoguer = "0.11.0"
hashbrown = { version = "0.15.1", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8.19"
